feat: search with multi fields in elastic search

--- a/package.json
+++ b/package.json
@@ -17,19 +17,42 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "schema:log": "typeorm-ts-node-commonjs -d src/database/datasource.ts schema:log",
+    "schema:drop": "typeorm-ts-node-commonjs -d src/database/datasource.ts schema:drop",
+    "schema:sync": "typeorm-ts-node-commonjs -d src/database/datasource.ts schema:sync",
+    "migration:show": "typeorm-ts-node-commonjs -d src/database/datasource.ts migration:show",
+    "migration:run": "typeorm-ts-node-commonjs -d src/database/datasource.ts migration:run",
+    "migration:run-fake": "typeorm-ts-node-commonjs -d src/database/datasource.ts migration:run --fake",
+    "migration:run-all": "typeorm-ts-node-commonjs -d src/database/datasource.ts migration:run --transaction all",
+    "migration:revert": "typeorm-ts-node-commonjs -d src/database/datasource.ts migration:revert",
+    "migration:generate": "cd src/database/migrations && typeorm-ts-node-commonjs -d ../datasource.ts migration:generate",
+    "migration:create": "cd src/database/migrations && typeorm migration:create",
+    "db:seed": "ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d src/database/datasource.ts --name ",
+    "db:seed:all": "npm run db:seed src/database/seeds/index.ts",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.17.1",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^11.0.5",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.8.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "husky": "^9.1.7",
+    "pg": "^8.13.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
+    "typeorm-naming-strategies": "^4.1.0",
     "typeorm-transactional": "^0.5.0"
   },
   "devDependencies": {
