--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,10 @@ services:
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}  # Lấy mật khẩu từ file .env
     ports:
       - "9200:9200"
+    expose:
+      - "9200"
     volumes:
-      - esdata:/usr/share/elasticsearch/data
+      - es_data:/usr/share/elasticsearch/data
     networks:
       - elastic_net
 
@@ -30,23 +32,24 @@ services:
     networks:
       - elastic_net
 
-  postgres:
+  database:
     image: postgres:16
-    container_name: postgres
+    container_name: elastic_search_db
+    restart: always
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      POSTGRES_DB: admin
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
     ports:
-      - "5437:5432"   # Host:5437 ánh xạ với container:5432
+      - "5437:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - backend_net
 
 volumes:
-  esdata:
-  pgdata:
+  es_data:
+  postgres_data:
 
 networks:
   elastic_net:
